--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,4 @@
+workspace = { members = ["external/device-simulation"] }
 [package]
 name = "device-sdk"
 version = "0.1.0"
@@ -15,3 +16,4 @@ tokio = { version = "1", default-features = false, features = [
     "signal",
     "rt-multi-thread",
 ] }
+async-trait = "0.1"
