--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,8 @@ tokio = { version = "1", default-features = false, features = [
     "rt-multi-thread",
 ] }
 async-trait = "0.1"
+env_logger = "0.11.3"
+url = "2.5.0"
+serde_yaml = "0.9.34"
+futures = "0.3.30"
+serde = "1.0.198"
