--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -35,8 +35,9 @@ jobs:
         if: always()
         with:
           files: target/nextest/ci/junit.xml
-      - name: Upload coverage data to codecov
-        uses: codecov/codecov-action@v3
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4.0.1
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           files: lcov.info
 
